<resources>
    <string name="app_name">TutorialsPointTraining</string>
    <string name="app_content"> List of topics </string>
    <string name="title_activity_basic">Basic Activity</string>
    <string name="title_activity_service"> Services </string>
    <string name="title_activity_content_provider"> Content provider </string>
    <string name="title_activity_intent"> Intents </string>
    <string name="title_activity_intent_filter"> Intent filter activity </string>

    <string name="button_start_service"> Start service </string>
    <string name="button_stop_service"> Stop service </string>

    <string name="placeholder_name"> Name </string>
    <string name="placeholder_grade"> Grade </string>

    <string name="button_add_student"> Add student </string>
    <string name="button_get_students"> Get students </string>

    <string name="button_open_website"> Open website </string>
    <string name="button_dial_phone_number"> Dial phone number </string>
    <string name="button_send_email"> Send email </string>
    <string name="button_browser_search"> Browser search </string>
    <string name="button_send_intent_filter"> Open activity with intent filter </string>
    <string name="button_open_intent_filter"> Open intent filter chooser </string>
</resources>
