<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.radi.tutorialspointtraining.intent.IntentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_open_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_open_website"/>
        <Button
            android:id="@+id/btn_dial_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_dial_phone_number"/>
        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_send_email"/>
        <Button
            android:id="@+id/btn_browser_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_browser_search"/>
    </LinearLayout>
</ScrollView>

