<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.radi.tutorialspointtraining.content_provider.ContentProviderActivity"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_student_name"
        android:hint="@string/placeholder_name"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_student_grade"
        android:hint="@string/placeholder_grade"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_add_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_student"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btn_get_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get_students"
        android:layout_gravity="center"
        />

</LinearLayout>